; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/dev/scsipi/libscsitest/extr_scsitest.c_sense_notready.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/dev/scsipi/libscsitest/extr_scsitest.c_sense_notready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsipi_xfer = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.scsi_sense_data }
%struct.scsi_sense_data = type { i32, i32, i32, i32, i32 }

@XS_SENSE = common dso_local global i32 0, align 4
@SKEY_NOT_READY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scsipi_xfer*)* @sense_notready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sense_notready(%struct.scsipi_xfer* %0) #0 {
  %2 = alloca %struct.scsipi_xfer*, align 8
  %3 = alloca %struct.scsi_sense_data*, align 8
  store %struct.scsipi_xfer* %0, %struct.scsipi_xfer** %2, align 8
  %4 = load %struct.scsipi_xfer*, %struct.scsipi_xfer** %2, align 8
  %5 = getelementptr inbounds %struct.scsipi_xfer, %struct.scsipi_xfer* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store %struct.scsi_sense_data* %6, %struct.scsi_sense_data** %3, align 8
  %7 = load i32, i32* @XS_SENSE, align 4
  %8 = load %struct.scsipi_xfer*, %struct.scsipi_xfer** %2, align 8
  %9 = getelementptr inbounds %struct.scsipi_xfer, %struct.scsipi_xfer* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.scsi_sense_data*, %struct.scsi_sense_data** %3, align 8
  %11 = getelementptr inbounds %struct.scsi_sense_data, %struct.scsi_sense_data* %10, i32 0, i32 0
  store i32 112, i32* %11, align 4
  %12 = load i32, i32* @SKEY_NOT_READY, align 4
  %13 = load %struct.scsi_sense_data*, %struct.scsi_sense_data** %3, align 8
  %14 = getelementptr inbounds %struct.scsi_sense_data, %struct.scsi_sense_data* %13, i32 0, i32 4
  store i32 %12, i32* %14, align 4
  %15 = load %struct.scsi_sense_data*, %struct.scsi_sense_data** %3, align 8
  %16 = getelementptr inbounds %struct.scsi_sense_data, %struct.scsi_sense_data* %15, i32 0, i32 1
  store i32 58, i32* %16, align 4
  %17 = load %struct.scsi_sense_data*, %struct.scsi_sense_data** %3, align 8
  %18 = getelementptr inbounds %struct.scsi_sense_data, %struct.scsi_sense_data* %17, i32 0, i32 2
  store i32 0, i32* %18, align 4
  %19 = load %struct.scsi_sense_data*, %struct.scsi_sense_data** %3, align 8
  %20 = getelementptr inbounds %struct.scsi_sense_data, %struct.scsi_sense_data* %19, i32 0, i32 3
  store i32 6, i32* %20, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
